# filman

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2025_04_23_1650-e051a977a774_.py  2025_04_24_1546-2f7d53303828_.py  2025_04_25_0109-c51cb3179d6f_.py  2025_05_02_2114-b80cb693b356_.py
scripts/seeders/: seed.py
scripts/seeders/data/: categories.json  comment_reactions.json  comments.json  countries.json  favorites.json  genres.json  persons.json  production_person.json  production_rating.json  productions.json  rating_companies.json  roles.json  trailers.json  users.json
src/: main.py
src/admin_panel/: auth.py  category.py  comment.py  country.py  genre.py  person.py  production.py  production_person.py  production_rating.py  rating_company.py  reaction.py  role.py  trailer.py  user.py
src/api/: router_factory.py
src/api/v1/: pagination.py  router.py
src/core/: base_exceptions.py  base_model.py  base_repository.py  base_service.py  config.py  db.py  generics.py  security.py
src/domains/: __init__.py
src/domains/associations/: production_country.py  production_genre.py  production_person.py  production_rating.py  user_favorite.py
src/domains/auth/: dependencies.py  exceptions.py  schemas.py  service.py
src/domains/categories/: dependencies.py  models.py  repository.py  schemas.py  service.py
src/domains/comment_reactions/: dependencies.py  models.py  repository.py  schemas.py  service.py
src/domains/comments/: dependencies.py  models.py  repository.py  schemas.py  (+1 more)
(+51 files in other folders)
